<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DutyCalls</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="usename">User Name</string>
    <string name="pswrd">Password</string>
    <string name="mytask">My Task</string>
    <string name="project">Projects</string>
    <string name="newuser">New User</string>
    <string name="save">Save</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email</string>
    <string name="selectDate">Select Date</string>
    <string name="date">Date</string>
	<string  name="taskname">Task Name</string>
	<string name="AssignTo">Assign To</string>
	<string name="dutedate">Due Date : </string>
	<string name="description">Description</string>
	<string name="project_name">Project Name:</string>
	<string name="assignPeople">Assign People</string>
	<string name="add_task">Add Task</string>
	<string name="testdata">Test Data</string>
</resources>