<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="" >

    <TextView
        android:id="@+id/newuser_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="33dp"
        android:paddingLeft="50dp"
        android:text="@string/taskname"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/login_username_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/newuser_textview"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/newuser_lastname_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/login_username_edittext"
        android:layout_marginTop="24dp"
        android:paddingLeft="50dp"
        android:text="@string/AssignTo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/login_password_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/newuser_lastname_textview"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/addtask_save_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/save" />

    <EditText
        android:id="@+id/newuser_username_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addtask_save_button"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/newuser_username_viewtext"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/login_password_edittext"
        android:orientation="vertical" >

        <Button
            android:id="@+id/addtask_duedate_textview_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:minWidth="60dp"
            android:text="@string/date" />

        <TextView
            android:id="@+id/newuser_email_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:text="@string/dutedate"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/addtask_duedateselected_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectDate"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <TextView
        android:id="@+id/newuser_username_viewtext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="17dp"
        android:paddingLeft="50dp"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>