<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/newuser_save_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/save" />

    <TextView
        android:id="@+id/newuser_firstname_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:paddingLeft="50dp"
        android:text="@string/fname"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/newuser_firstname_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/newuser_firstname_textview"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/newuser_lastname_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/newuser_username_viewtext"
        android:layout_below="@+id/newuser_firstname_edittext"
        android:layout_marginTop="20dp"
        android:paddingLeft="50dp"
        android:text="@string/lname"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/newuser_lastname_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/newuser_lastname_textview"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/newuser_email_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/newuser_lastname_edittext"
        android:layout_marginTop="20dp"
        android:paddingLeft="50dp"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/newuser_email_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/newuser_email_textview"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/newuser_username_viewtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/newuser_email_edittext"
        android:layout_marginTop="20dp"
        android:paddingLeft="50dp"
        android:text="@string/usename"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/newuser_username_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/newuser_username_viewtext"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/newuser_password_viewtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newuser_lastname_textview"
        android:layout_below="@+id/newuser_username_edittext"
        android:layout_marginTop="20dp"
        android:paddingLeft="50dp"
        android:text="@string/pswrd"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/newuser_password_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/newuser_password_viewtext"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

</RelativeLayout>